{
  "version": 4,
  "terraform_version": "1.2.7",
  "serial": 314,
  "lineage": "25338bbb-2916-da28-d8a2-d64ef0247f1f",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-001",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e912d13fbb4f225",
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:instance/i-09494780449d7f81a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09494780449d7f81a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0559962ff33f1ea51",
            "private_dns": "ip-10-0-3-41.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.41",
            "public_ip": "54.179.146.45",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cd701a8b77456bbd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c593c8f1bec410c4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b89c04008734833",
            "tags": {
              "Name": "dev-env-ec2-subnet-04b89c04008734833"
            },
            "tags_all": {
              "Name": "dev-env-ec2-subnet-04b89c04008734833"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c593c8f1bec410c4"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "ec2-002",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e912d13fbb4f225",
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:instance/i-079dc2f55c5f86acc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-079dc2f55c5f86acc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03dcdfc1ba159d85f",
            "private_dns": "ip-10-0-9-215.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.9.215",
            "public_ip": "18.142.177.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0de86093354cd0143",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c593c8f1bec410c4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03afdf9dc9a1a871f",
            "tags": {
              "Name": "dev-env-ec2-subnet-03afdf9dc9a1a871f"
            },
            "tags_all": {
              "Name": "dev-env-ec2-subnet-03afdf9dc9a1a871f"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c593c8f1bec410c4"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "ec2-003",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e912d13fbb4f225",
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:instance/i-0a65a64f3e0f61f93",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a65a64f3e0f61f93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "singapore",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bd289a48526c69c4",
            "private_dns": "ip-10-0-13-64.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.13.64",
            "public_ip": "13.229.142.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09ae63b19000c2925",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0c593c8f1bec410c4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-004331429cf0afc69",
            "tags": {
              "Name": "dev-env-ec2-subnet-004331429cf0afc69"
            },
            "tags_all": {
              "Name": "dev-env-ec2-subnet-004331429cf0afc69"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c593c8f1bec410c4"
            ]
          },
          "dependencies": [
            "module.sg.aws_security_group.allow_tls",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2-sg",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:security-group/sg-0c593c8f1bec410c4",
            "description": "SG for ec2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c593c8f1bec410c4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "074520742851",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-env-sg"
            },
            "tags_all": {
              "Name": "dev-env-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13aef8ae99782c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:internet-gateway/igw-0eb3b7512b756344e",
            "id": "igw-0eb3b7512b756344e",
            "owner_id": "074520742851",
            "tags": {
              "Name": "dev-env-vpc-pub-igw"
            },
            "tags_all": {
              "Name": "dev-env-vpc-pub-igw"
            },
            "vpc_id": "vpc-0b13aef8ae99782c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:route-table/rtb-043907749892c01a3",
            "id": "rtb-043907749892c01a3",
            "owner_id": "074520742851",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb3b7512b756344e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-env-vpc-pub-rt"
            },
            "tags_all": {
              "Name": "dev-env-vpc-pub-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b13aef8ae99782c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pbsnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pb-1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a91b0ee67abbf627",
            "route_table_id": "rtb-043907749892c01a3",
            "subnet_id": "subnet-04b89c04008734833"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e79d56a65e4bae5f",
            "route_table_id": "rtb-043907749892c01a3",
            "subnet_id": "subnet-03afdf9dc9a1a871f"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-3",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d47efd0a68ebaac9",
            "route_table_id": "rtb-043907749892c01a3",
            "subnet_id": "subnet-004331429cf0afc69"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.pub_rt",
            "module.vpc.aws_subnet.pub-snet",
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub-snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "snet-pb-1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:subnet/subnet-04b89c04008734833",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/21",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b89c04008734833",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074520742851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-env-pub-snet-ap-southeast-1a"
            },
            "tags_all": {
              "Name": "dev-env-pub-snet-ap-southeast-1a"
            },
            "vpc_id": "vpc-0b13aef8ae99782c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:subnet/subnet-03afdf9dc9a1a871f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03afdf9dc9a1a871f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074520742851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-env-pub-snet-ap-southeast-1b"
            },
            "tags_all": {
              "Name": "dev-env-pub-snet-ap-southeast-1b"
            },
            "vpc_id": "vpc-0b13aef8ae99782c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        },
        {
          "index_key": "snet-pb-3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:subnet/subnet-004331429cf0afc69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004331429cf0afc69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "074520742851",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev-env-pub-snet-ap-southeast-1c"
            },
            "tags_all": {
              "Name": "dev-env-pub-snet-ap-southeast-1c"
            },
            "vpc_id": "vpc-0b13aef8ae99782c2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:074520742851:vpc/vpc-0b13aef8ae99782c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-06aa52c9ce10e1ee7",
            "default_route_table_id": "rtb-0698c388db512c834",
            "default_security_group_id": "sg-02bada7175baac0e3",
            "dhcp_options_id": "dopt-0d858b58eafdb01c8",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b13aef8ae99782c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0698c388db512c834",
            "owner_id": "074520742851",
            "tags": {
              "Name": "dev-env-vpc"
            },
            "tags_all": {
              "Name": "dev-env-vpc"
            }
          }
        }
      ]
    }
  ]
}